[package]
name = "farm-analyze-lo"
license = "MIT"
version = "1.0.1"
edition = "2021"
description = "A lib to calc for efficient with farming of power lvling."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.44"
rust_decimal = "1.31"
rust_decimal_macros = "1.31"
chrono = "0.4.26"

[dev-dependencies]
rstest = "0.18.1"
